--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 		<!-- meta character set -->
 		<meta charset="UTF-8">
 		<!-- Site Title -->
-		<title>Tour India</title>
-        <link rel="icon" href="./img/j.jpg" type="image/jpg">
+		<title>Notify Mumbai | Local Tour Guide </title>
+        <link rel="icon" href="./img/favicon.ico" type="image/jpg">
 		<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet"> 
 			<!--CSS============================================= -->
 			<link rel="stylesheet" href="css/linearicons.css">
@@ -35,7 +35,7 @@
 				<nav class="navbar navbar-expand-lg  navbar-light">
 					<div class="container">
 						  <a class="navbar-brand" href="index.html">
-						  	<img src="img/logo.png" alt="">
+						  	<img src="img/head-logo.png" alt="">
 						  </a>
 						  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 						    <span class="text-white lnr lnr-menu"></span>
@@ -61,7 +61,7 @@
 							<div class="banner-content col-lg-10">
 								<h5 class="text-uppercase">Be the part of this Wonderful Journey</h5>
 								<h1>
-									Incredible India!				
+									Amchi Mumbai!				
 								</h1>
 								<a href="#" class="primary-btn text-uppercase">Explore Now</a>
 							</div>											
