changes to places

--- a/index.html
+++ b/index.html
@@ -85,121 +85,121 @@
 				    <div class="filters">
 				      <ul>
 				        <li class="active" data-filter="*">All</li>
-				        <li data-filter=".corporate">North</li>
-				        <li data-filter=".personal">Central</li>
-				        <li data-filter=".agency">North-Eastern</li>
-				        <li data-filter=".portal">South</li>
+				        <!-- <li data-filter=".north">North</li> -->
+				        <li data-filter=".central">Central</li>
+				        <li data-filter=".western">Western</li>
+				        <li data-filter=".south">South</li>
 				      </ul>
 				    </div>
 				    
 				    <div class="filters-content">
 				      <div class="row grid">
-				        <div class="single-portfolio col-sm-4 all corporate">
+				        <div class="single-portfolio col-sm-4 all central western">
 				          <div class="item">
-				            <img src="img/p1.jpg" alt="Work 1">
+				            <img src="img/p01.jpg" alt="Work 1">
 				            <div class="p-inner">
-				              <h4><a href="./Pages-inside/GoldenTemple-Info.html">Golden Temple</a></h4>
-				              <div class="cat">Punjab</div>
+				              <h4><a href="./Pages-inside/GoldenTemple-Info.html">Gate way of India</a></h4>
+				              <div class="cat">Colaba</div>
 				            </div>
 				          </div>
 				        </div>
-				        <div class="single-portfolio col-sm-4 all personal">
+				        <div class="single-portfolio col-sm-4 all central western">
 				          <div class="item">
-				            <img src="img/p2.jpg" alt="Work 1">
+				            <img src="img/p02.jpg" alt="Work 1">
 				            <div class="p-inner">
-				              <h4>Gwalior Fort</h4>
-				              <div class="cat">Madhya Pradesh</div>
+				              <h4>Taj Hotel</h4>
+				              <div class="cat">Colaba</div>
 				            </div>
 				          </div>
 				        </div>
-				        <div class="single-portfolio col-sm-4 all agency">
+				        <div class="single-portfolio col-sm-4 all central">
 				          <div class="item">
-				            <img src="img/p9.jpg" alt="Work 1">
+				            <img src="img/p03.jpg" alt="Work 1">
 				            <div class="p-inner">
-				              <h5>Twang</h5>
-				              <div class="cat">Arunachal Pradesh</div>
+				              <h5>CSMT</h5>
+				              <div class="cat">Mumbai</div>
 				            </div>
 				          </div>
 				        </div>
-				        <div class="single-portfolio col-sm-4 all portal">
+				        <div class="single-portfolio col-sm-4 all  western">
 				          <div class="item">
-				            <img src="img/p12.jpg" alt="Work 1">
+				            <img src="img/p04.JPG" alt="Work 1">
 				            <div class="p-inner">
-				              <h5>Alleppey</h5>
-				              <div class="cat">Kerala</div>
+				              <h5>Sanjay Gandhi National Park</h5>
+				              <div class="cat">Borivali</div>
 				            </div>
 				          </div>
 				        </div>
 
-				        <div class="single-portfolio col-sm-4 all corporate">
+				        <div class="single-portfolio col-sm-4 all western">
 				          <div class="item">
-				            <img src="img/p5.jpg" alt="Work 1">
+				            <img src="img/p05.jpg" alt="Work 1">
 				            <div class="p-inner">
-				              <h4>Camel Safari</h4>
-				              <div class="cat">Rajasthan</div>
+				              <h4>Marine Drive</h4>
+				              <div class="cat">Marine lines</div>
 				            </div>
 				          </div>
 				        </div>
-				        <div class="single-portfolio col-sm-4 all personal">
+				        <div class="single-portfolio col-sm-4 all central south">
 				          <div class="item">
-				            <img src="img/p6.jpg" alt="Work 1">
+				            <img src="img/p06.jpg" alt="Work 1">
 				            <div class="p-inner">
-				              <h4>Sanchi Stupa</h4>
-				              <div class="cat">Madhya Pradesh</div>
+				              <h4>Powai Lake</h4>
+				              <div class="cat">Andheri, Powai</div>
 				            </div>
 				          </div>
 				        </div>
-				        <div class="single-portfolio col-sm-4 all agency">
+				        <div class="single-portfolio col-sm-4 all western">
 				          <div class="item">
-				            <img src="img/p7.jpg" alt="Work 1">
+				            <img src="img/p07.jpg" alt="Work 1">
 				            <div class="p-inner">
-				              <h5>Umngot river</h5>
-				              <div class="cat">Meghalaya</div>
+				              <h5>Juhu Beach</h5>
+				              <div class="cat">Bandra</div>
 				            </div>
 				          </div>
 				        </div>
-				        <div class="single-portfolio col-sm-4 all portal">
+				        <div class="single-portfolio col-sm-4 all western">
 				          <div class="item">
-				            <img src="img/p10.jpg" alt="Work 1">
+				            <img src="img/p08.jpg" alt="Work 1">
 				            <div class="p-inner">
-				              <h5>Vivekananda Rock Memorial</h5>
-				              <div class="cat">Tamil Nadu</div>
+								<h5>Band Stand</h5>
+								<div class="cat">Bandra</div>
 				            </div>
 				          </div>
 				        </div>		
-				        <div class="single-portfolio col-sm-4 all corporate">
+				        <div class="single-portfolio col-sm-4 all western">
 				          <div class="item">
-				            <img src="img/p4.jpg" alt="Work 1">
+				            <img src="img/p09.jpg" alt="Work 1">
 				            <div class="p-inner">
-				              <h4>Mehrangarh Fort</h4>
-				              <div class="cat">Rajasthan</div>
+				              <h4>Mount Mary Church</h4>
+				              <div class="cat">Bandra</div>
 				            </div>
 				          </div>
 				        </div>
-				        <div class="single-portfolio col-sm-4 all personal">
+				        <div class="single-portfolio col-sm-4 all central south">
 				          <div class="item">
-				            <img src="img/p3.jpg" alt="Work 1">
+				            <img src="img/p10.jpg" alt="Work 1">
 				            <div class="p-inner">
-				              <h4>Hampi</h4>
-				              <div class="cat">Karnataka</div>
+				              <h4>St Thomas Cathedral </h4>
+				              <div class="cat">ChurchGate</div>
 				            </div>
 				          </div>
 				        </div>
-				        <div class="single-portfolio col-sm-4 all agency">
-				          <div class="item">
-				            <img src="img/p8.jpg" alt="Work 1">
-				            <div class="p-inner">
-				              <h5>Mon</h5>
-				              <div class="cat">Myanmar</div>
-				            </div>
-				          </div>
-				        </div>
-				        <div class="single-portfolio col-sm-4 all portal">
+				        <div class="single-portfolio col-sm-4 all western">
 				          <div class="item">
 				            <img src="img/p11.jpg" alt="Work 1">
 				            <div class="p-inner">
-				              <h5>Colva Beach</h5>
-				              <div class="cat">Goa</div>
+				              <h5>Haji Ali Dargah</h5>
+				              <div class="cat">Mahalaxmi</div>
+				            </div>
+				          </div>
+				        </div>
+				        <div class="single-portfolio col-sm-4 all south">
+				          <div class="item">
+				            <img src="img/p12.jpg" alt="Work 1">
+				            <div class="p-inner">
+				              <h5>Elephanta Caves</h5>
+				              <div class="cat">Borivali</div>
 				            </div>
 				          </div>
 				        </div>					        		        
@@ -358,10 +358,11 @@
 								<div class="single-footer-widget">
 									<h6>About Us</h6>
 									<p>
-										We Provide Tour Plans for your most comfortable travel ever. Let yourself dive into the Beauty, Culture &amp; festivals of India. Have You're Good time at India.
+										We Provide Tour Plans for your most comfortable travel ever. Let yourself dive into the Beauty, Culture &amp; festivals of Mumbai. Have You're Good time at Mumbai.
 									</p>
 									<p class="footer-text">
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This Website is created with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://github.com/mrjatinchauhan" target="_blank">Jatin Chauhan</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This Website is created with <i class="fa fa-heart-o" aria-hidden="true"></i> by 
+<a href="https://github.com/pratap360" target="_blank">Pratap Parui</a> and <a href="https://github.com/kunalraj0 target="_blank">Kunalraj singh</a>
 								</p>	
 								</div>
 							</div>
