--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 				          <div class="item">
 				            <img src="img/p01.jpg" alt="Work 1">
 				            <div class="p-inner">
-				              <h4><a href="./Pages-inside/GoldenTemple-Info.html">Gate way of India</a></h4>
+				              <h4><a href="./Pages-inside/Gateway of India.html">Gate way of India</a></h4>
 				              <div class="cat">Colaba</div>
 				            </div>
 				          </div>
