--- a/Pages-inside/Gateway of India.html
+++ b/Pages-inside/Gateway of India.html
@@ -8,13 +8,13 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Tour India</title>
-
+  <title>Notify Mumbai | Gateway of India </title>
+  <link rel="icon" href="../img/favicon.ico" type="image/jpg">
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="css/goldentemple.css" rel="stylesheet">
+  <link href="css/gatewayofindia.css" rel="stylesheet">
 
 </head>
 
@@ -23,7 +23,7 @@
   <!-- Navigation -->
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Tour India</a>
+      <a class="navbar-brand" href="index.html">Notify Mumbai </a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -55,14 +55,14 @@
       <li class="breadcrumb-item">
         <a href="index.html">Home</a>
       </li>
-      <li class="breadcrumb-item active">Taj Mahal</li>
+      <li class="breadcrumb-item active">Mumbai</li>
     </ol>
 
     <!-- Portfolio Item Row -->
     <div class="row">
 
       <div class="col-md-8">
-        <img class="img-fluid" src="./img/Harmandir-Sahib-Amritsar-India-Punjab.jpg" alt="">
+        <img class="img-fluid" src="./img/gateway-thumbnail.jpg" alt="gateway-thumbnail">
       </div>
 
       <div class="col-md-4">
@@ -88,25 +88,25 @@ The temple is built around a man-made pool (sarovar) that was completed by Guru 
 
       <div class="col-md-3 col-sm-6 mb-4">
         <a href="#">
-          <img class="img-fluid" src="./img/The-Golden-Temple-India8.jpg" alt="">
+          <img class="img-fluid" src="./img/gateway side.jpg" alt="gatewayside">
         </a>
       </div>
 
       <div class="col-md-3 col-sm-6 mb-4">
         <a href="#">
-          <img class="img-fluid" src="./img/597529822Amritsar_Main.jpg" alt="">
+          <img class="img-fluid" src="./img/gateway-night.jpg" alt="gateway-night">
         </a>
       </div>
 
       <div class="col-md-3 col-sm-6 mb-4">
         <a href="#">
-          <img class="img-fluid" src="./img/imb-photos-warrior-medium.jpg" alt="">
+          <img class="img-fluid" src="./img/gateway-of-india.jpeg" alt="gateway-of-india">
         </a>
       </div>
 
       <div class="col-md-3 col-sm-6 mb-4">
         <a href="#">
-          <img class="img-fluid" src="./img/photo1.jpg" alt="">
+          <img class="img-fluid" src="./img/Gatway-purple.jpg" alt="gatewaypurple">
         </a>
       </div>
 
@@ -119,7 +119,7 @@ The temple is built around a man-made pool (sarovar) that was completed by Guru 
   <!-- Footer -->
   <footer class="py-3 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Tour India</p>
+      <p class="m-0 text-center text-white">Copyright &copy; Notify Mumbai</p>
     </div>
     <!-- /.container -->
   </footer>
