--- a/Pages-inside/Gateway of India.html
+++ b/Pages-inside/Gateway of India.html
@@ -47,8 +47,8 @@
   <div class="container">
 
     <!-- Page Heading/Breadcrumbs -->
-    <h1 class="mt-4 mb-3">Golden Temple
-      <small>It's Real Gold</small>
+    <h1 class="mt-4 mb-3">Gateway of India
+      <small></small>
     </h1>
 
     <ol class="breadcrumb">
@@ -67,14 +67,12 @@
 
       <div class="col-md-4">
         <h3 class="my-3">Description</h3>
-        <p>The Golden Temple, also known as Sri Harmandir Sahib ("abode of God") or Darbar Sahib, (Punjabi pronunciation: [dəɾbɑɾ sɑhɪb], "exalted holy court"), is a Gurdwara located in the city of Amritsar, Punjab, India.After Gurdwara Janam Asthan, the birthplace of Sikhism, this temple is the most important pilgrimage site of Sikhism.
+        <p>The Gateway of India is an arch-monument built in the early 20th century in the city of Mumbai (Bombay), India. It was erected to commemorate the landing of King-Emperor George V, the first British monarch to visit India, in December 1911 at Strand Road near Wellington Fountain.
 
-The temple is built around a man-made pool (sarovar) that was completed by Guru Ram Das in 1577. </p>
-        <h3 class="my-3">Also Known as</h3>
+           </p>
+   
         <ul>
-          <li>abode of God</li>
-          <li>dəɾbɑɾ sɑhɪb</li>
-          <li>Sri Harmandir Sahib</li>
+        
         </ul>
       </div>
 
