--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<!-- Mobile Specific Meta -->
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<!-- Favicon-->
-		<link rel="shortcut icon" href="img/fav.png">
+		<link rel="icon" href="./img/favicon.ico" type="image/jpg">
 		<!-- Author Meta -->
 		<meta name="author" content="">
 		<!-- Meta Description -->
@@ -15,7 +15,7 @@
 		<meta charset="UTF-8">
 		<!-- Site Title -->
 		<title>Notify Mumbai | Local Tour Guide </title>
-        <link rel="icon" href="./img/favicon.ico" type="image/jpg">
+       
 		<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet"> 
 			<!--CSS============================================= -->
 			<link rel="stylesheet" href="css/linearicons.css">
@@ -63,7 +63,7 @@
 								<h1>
 									Amchi Mumbai!				
 								</h1>
-								<a href="#" class="primary-btn text-uppercase">Explore Now</a>
+								<a href="./Pages-inside/bookguide.html" class="primary-btn text-uppercase">Book a Tour Guide</a>
 							</div>											
 						</div>
 					</div>
@@ -244,9 +244,9 @@
 							<div class="col-lg-4">
 								<div class="single-service">
 									<img class="img-fluid" src="img/s2.png" alt="">
-									<h4>Visa Ready</h4>
+									<h4>Guide Ready</h4>
 									<p>
-										Just 32 Hours - What it takes get your Visa Ready and other documentation necessary for travel.
+										Just 12 Hours - What it takes get your Guide Ready to take you for tour of Mumbai travel.
 									</p>
 								</div>
 							</div>
@@ -280,13 +280,13 @@
 								<div class="single-review">
 									<img src="img/c1.png" alt="">
 									<div class="title d-flex flex-row">
-										<a href="#"><h4>Fannie Rowe</h4></a>									
+										<a href="#"><h4>Krish Malhotra</h4></a>									
 										<div class="star">
 											<span class="fa fa-star checked"></span>
 											<span class="fa fa-star checked"></span>
 											<span class="fa fa-star checked"></span>
 											<span class="fa fa-star checked"></span>
-											<span class="fa fa-star checked"></span>
+											<!-- <span class="fa fa-star checked"></span> -->
 										</div>
 									</div>
 									<p>
@@ -296,7 +296,7 @@
 								<div class="single-review">
 									<img src="img/c3.png" alt="">
 									<div class="title d-flex flex-row">
-										<a href="#"><h4>Lillie Summers</h4></a>									
+										<a href="#"><h4>Olivia Davis</h4></a>									
 										<div class="star">
 											<span class="fa fa-star checked"></span>
 											<span class="fa fa-star checked"></span>
@@ -306,7 +306,7 @@
 										</div>
 									</div>
 									<p>
-										Just one Word - Incredible!
+										Just an Awesome & Incredible Journey to visit I love amchi Mumbai!
 									</p>
 								</div>															
 							</div>
@@ -314,7 +314,7 @@
 								<div class="single-review">
 									<img src="img/c2.png" alt="">
 									<div class="title d-flex flex-row">
-										<a href="#"><h4>Bob Marley</h4></a>									
+										<a href="#"><h4>Aisha Chatterjee</h4></a>									
 										<div class="star">
 											<span class="fa fa-star checked"></span>
 											<span class="fa fa-star checked"></span>
@@ -324,13 +324,13 @@
 										</div>
 									</div>
 									<p>
-										Damm! I'm thinking of staying here in this World.
+										Damm! I'm thinking of staying here in this Mumbai, I really love the St Thomas Church.
 									</p>
 								</div>	
 								<div class="single-review">
 									<img src="img/c4.png" alt="">
 									<div class="title d-flex flex-row">
-										<a href="#"><h4>Jackie Chan</h4></a>									
+										<a href="#"><h4>Mason Thomas</h4></a>									
 										<div class="star">
 											<span class="fa fa-star checked"></span>
 											<span class="fa fa-star checked"></span>
