--- a/Pages-inside/About.html
+++ b/Pages-inside/About.html
@@ -8,10 +8,18 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>About Us - Tour India</title>
+  <title>About Us - Notify Mumbai</title>
+  <!-- Favicon-->
+  <link rel="icon" href="../img/favicon.ico" type="image/jpg">
 
   <!-- Bootstrap core CSS -->
   <link href="./bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+   <!-- Compiled and minified CSS -->
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+   <!-- fonts import -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+   <!-- font awesome cdn import -->
 
   <!-- Custom styles for this template -->
   <link href="css/scrolling-nav.css" rel="stylesheet">
@@ -23,7 +31,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Tour India</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">Notify Mumbai</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -53,51 +61,108 @@
     </div>
   </header>
 
-  <section id="about">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 mx-auto">
-          <h2>About Tour India</h2>
-          <p class="lead">We have wide Varieties of Hotel & Resorts to accomodate you. 3D4N or 15D16N totally upto you.</p>
-          <ul>
-            <li>Ammenties Selection for every price options</li>
-            <li>Visa Ready - we got you everything covered</li>
-            <li>Personalized Travel Plans section bachelors to couples</li>
-            <li>Minimal custom duties and charges so you are free to explore your own unique options</li>
-          </ul>
+<!-- About the Group -->
+
+  <h4>Maintainers</h4>
+  <div class="container">
+
+ 
+  <!-- pratap parui profile  -->
+  <div class="row">
+    <div class="col s12 m3 l6 center-on-small-only ">
+      <div class="card-panel teal lighten-5">
+        <div class="row">
+          <div class="col s12 m3">
+            <div class="image-container">
+              <img src="https://avatars.githubusercontent.com/u/52885495?v=4" alt="profile-pic"
+                class="circle responsive-img">
+            </div>
+          </div>
+          <div class="col s12 m9">
+            <h4 class="deep-purple-text">Pratap Parui</h4>
+            <div class="chip">Frontend Developer</div>
+            <div class="chip">UI/UX Designer</div>
+            <div class="chip">Graphic Designer</div>
+            <div class="chip">Materialize Expert</div>
+            <p class="deep-purple-text left-align">Pratap is an Information Technology under-Grad Student and had
+              curosity in Cloud Computing such as Google Cloud & AWS also getting knowledege in Crypto Currency
+              (NFT's) <br>connect with me 👇</p>
+
+            <p class="waves-light waves-effect btn deep-purple darken-3">
+              <a href="https://github.com/pratap360" class="fab fa-github fa-lg" style="color:white"
+                title="Github"></a>
+            </p>
+            <p class="waves-light waves-effect btn deep-purple darken-3">
+              <a href="https://twitter.com/parui_pratap" class="fab fa-twitter fa-lg " style="color:white"
+                title="Twitter"></a>
+            </p>
+            <p class="waves-light waves-effect btn deep-purple darken-3">
+              <a href="https://www.linkedin.com/in/pratap-parui-mr-sumbuddy/" class="fab fa-linkedin fa-lg "
+                style="color:white" title="Linkedin"></a>
+            </p>
+            <p class="waves-light waves-effect btn deep-purple darken-3">
+              <a href="https://www.instagram.com/mr_sumbuddy/" class="fab fa-instagram fa-lg " style="color:white"
+                title="Instagram"></a>
+            </p>
+            <p class="waves-light waves-effect btn deep-purple darken-3">
+              <a href="https://www.mrparuiweb.dev/" title="mr parui web" target="_blank"><i
+                  class="material-icons white-text">public</i></a>
+            </p>
+          </div>
         </div>
       </div>
     </div>
-  </section>
 
-  <section id="services" class="bg-light">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 mx-auto">
-          <h2>Services we offer</h2>
-          <p class="lead">We offer cutomized plans as well as specially framed packages to accomodate you for the wonderful experience you're going to experience while travelling in Incredible India. We are always with you with our 24x7 cutomer support on online as well as on call. We're always there when you need us. Have a Life remembering Journey with our Hotels and Accomodation Partner all over the country of delights and culture.</p>
+    <!--kunal raj profile  -->
+
+    <div class="col s12 m3 l6 center-on-small-only">
+      <div class="card-panel teal lighten-5">
+        <div class="row">
+          <div class="col s12 m3">
+            <div class="image-container">
+              <img src="https://avatars.githubusercontent.com/u/73094875?v=4" alt="profile-pic"
+                class="circle responsive-img">
+              <!-- <img src="../assets/images/rahamat.jpg" alt="profile-pic" class="circle responsive-img"> -->
+            </div>
+          </div>
+          <div class="col s12 m9">
+            <h4 class="deep-purple-text">Kunal Raj singh</h4>
+            <div class="chip">Backend Developer</div>
+            <div class="chip">Php Expert</div>
+            <div class="chip">Ethical Hacker</div>
+            <p class="deep-purple-text left-align">Rahmat Ali is also an Information Technology under-Grad Student
+              and the curiosity to learn new things about Hacking and Crypto Currency such as Bitcoin and drop ship
+              <br>connect with me 👇</p>
+            <p class="waves-light waves-effect btn deep-purple darken-3">
+              <a href="https://github.com/bhaitabahi786" class="fab fa-github fa-lg" style="color:white"
+                title="Github"></a>
+            </p>
+            <p class="waves-light waves-effect btn deep-purple darken-3">
+              <a href="https://twitter.com/bhai_tabahi_786" class="fab fa-twitter fa-lg " style="color:white"
+                title="Twitter"></a>
+            </p>
+            <p class="waves-light waves-effect btn deep-purple darken-3">
+              <a href="https://www.linkedin.com/in/rahmatalishaikh-bhaitabahi/" class="fab fa-linkedin fa-lg "
+                style="color:white" title="Linkedin"></a>
+            </p>
+            <p class="waves-light waves-effect btn deep-purple darken-3">
+              <a href="https://www.instagram.com/bhai_tabahi_786/" class="fab fa-instagram fa-lg " style="color:white"
+                title="Instagram"></a>
+            </p>
+            <p class="waves-light waves-effect btn deep-purple darken-3">
+              <a href="https://bugcrowd.com/bhai_tabahi_786" title="Bugcrowd"><i
+                  class="material-icons white-text">public</i></a>
+            </p>
+          </div>
         </div>
       </div>
     </div>
-  </section>
-
-  <section id="contact">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 mx-auto">
-          <h2>Contact us</h2>
-            <p class="lead">phone Number. +91 9XXXXXXXXX</p>
-            <p class="lead">Fax : XXXXXXXXXXX</p>
-            <p class="lead">Email : help@tourindia.com</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
+  </div>
+</div>
   <!-- Footer -->
   <footer class="py-3 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Tour India</p>
+      <p class="m-0 text-center text-white">Copyright &copy; Notify Mumbai</p>
     </div>
   </footer>
 
