--- a/Pages-inside/SignUp.html
+++ b/Pages-inside/SignUp.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>Login</title>
+   <!-- Favicon-->
+   <link rel="icon" href="../img/favicon.ico" type="image/jpg">
   <link rel = "stylesheet" href = "css/main.css">
 </head>
 <body>
