--- a/Pages-inside/blog.html
+++ b/Pages-inside/blog.html
@@ -8,8 +8,9 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Tour India</title>
-
+  <title>Notify Mumbai | Blogs</title>
+<!-- Favicon-->
+<link rel="icon" href="../img/favicon.ico" type="image/jpg">
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -28,7 +29,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Tour India</a>
+      <a class="navbar-brand" href="index.html">Blogs</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
