--- a/Pages-inside/About.html
+++ b/Pages-inside/About.html
@@ -122,37 +122,35 @@
             <div class="image-container">
               <img src="https://avatars.githubusercontent.com/u/73094875?v=4" alt="profile-pic"
                 class="circle responsive-img">
-              <!-- <img src="../assets/images/rahamat.jpg" alt="profile-pic" class="circle responsive-img"> -->
             </div>
           </div>
           <div class="col s12 m9">
-            <h4 class="deep-purple-text">Kunal Raj singh</h4>
+            <h4 class="deep-purple-text">Kunalraj singh</h4>
             <div class="chip">Backend Developer</div>
             <div class="chip">Php Expert</div>
             <div class="chip">Ethical Hacker</div>
-            <p class="deep-purple-text left-align">Rahmat Ali is also an Information Technology under-Grad Student
-              and the curiosity to learn new things about Hacking and Crypto Currency such as Bitcoin and drop ship
+            <p class="deep-purple-text left-align">Kunalraj Singh is also an Computer Science under-Grad Student
+              and the curiosity to learn new things about Hacking and Blockchain
               <br>connect with me 👇</p>
             <p class="waves-light waves-effect btn deep-purple darken-3">
-              <a href="https://github.com/bhaitabahi786" class="fab fa-github fa-lg" style="color:white"
+              <a href="https://github.com/kunalraj0" class="fab fa-github fa-lg" style="color:white"
                 title="Github"></a>
             </p>
             <p class="waves-light waves-effect btn deep-purple darken-3">
-              <a href="https://twitter.com/bhai_tabahi_786" class="fab fa-twitter fa-lg " style="color:white"
+              <a href="https://twitter.com/kunalraj_0" class="fab fa-twitter fa-lg " style="color:white"
                 title="Twitter"></a>
             </p>
             <p class="waves-light waves-effect btn deep-purple darken-3">
-              <a href="https://www.linkedin.com/in/rahmatalishaikh-bhaitabahi/" class="fab fa-linkedin fa-lg "
+              <a href="https://www.linkedin.com/in/kunalrajsingh/" class="fab fa-linkedin fa-lg "
                 style="color:white" title="Linkedin"></a>
             </p>
             <p class="waves-light waves-effect btn deep-purple darken-3">
-              <a href="https://www.instagram.com/bhai_tabahi_786/" class="fab fa-instagram fa-lg " style="color:white"
+              <a href="https://www.instagram.com/kunalraj_0/" class="fab fa-instagram fa-lg " style="color:white"
                 title="Instagram"></a>
             </p>
             <p class="waves-light waves-effect btn deep-purple darken-3">
-              <a href="https://bugcrowd.com/bhai_tabahi_786" title="Bugcrowd"><i
+              <a href="https://kunalraj.dev/" title="mr parui web" target="_blank"><i
                   class="material-icons white-text">public</i></a>
-            </p>
           </div>
         </div>
       </div>
