--- a/Pages-inside/bookguide.html
+++ b/Pages-inside/bookguide.html
@@ -16,8 +16,6 @@
         .custbtn {
             background-color: #8ab92d;
         }
-
- 
     </style>
 </head>
 
@@ -26,67 +24,81 @@
 
     <div class="container">
         <h1>Guide Booking</h1>
-        <form>
+        <form id="TourGuide">
             <div class="mb-3">
                 <label for="name" class="form-label">Name</label>
-                <input type="text" class="form-control" id="name" placeholder="Enter your name">
+                <input type="text" class="form-control" name="name"  id="name" placeholder="Enter your name" required>
             </div>
             <div class="mb-3">
                 <label for="email" class="form-label">Email address</label>
-                <input type="email" class="form-control" id="email" placeholder="Enter your email">
+                <input type="email" class="form-control"  name="email" id="email" placeholder="Enter your email" required>
             </div>
             <div class="mb-3">
                 <label for="date" class="form-label">Preferred Date</label>
-                <input type="date" class="form-control" id="date">
+                <input type="date" class="form-control"  name="date" id="date" required>
             </div>
             <div class="mb-3">
                 <label for="message" class="form-label">Message</label>
-                <textarea class="form-control" id="message" rows="3"
-                    placeholder="Enter any additional message"></textarea>
+                <textarea class="form-control"  name="message" id="message" rows="3"
+                    placeholder="Enter any additional message" required></textarea>
             </div>
             <button type="submit" class="btn btn-primary custbtn">Book Guide</button>
         </form>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@1.17.0"></script>
+    <script src="https://unpkg.com/@supabase/supabase-js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@1.17.0"></script> -->
 
     <!-- supabase implementation -->
 
     <script>
 
-        // Initialize Supabase client
-        const supabaseUrl = 'https://opwelwbjzepiuruiqqrt.supabase.co';
-        const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im9wd2Vsd2JqemVwaXVydWlxcXJ0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE2ODU4NDQ0ODQsImV4cCI6MjAwMTQyMDQ4NH0.olNtN-v7IIVxE1fVl4OxaCEAp1pXWi0Q140Is4LvoKI';
-        const supabase = supabase.createClient(supabaseUrl, supabaseKey);
+        const { createClient } = supabase
+
+        supabase = createClient("https://opwelwbjzepiuruiqqrt.supabase.co",
+            "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im9wd2Vsd2JqemVwaXVydWlxcXJ0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE2ODU4NDQ0ODQsImV4cCI6MjAwMTQyMDQ4NH0.olNtN-v7IIVxE1fVl4OxaCEAp1pXWi0Q140Is4LvoKI")
+
+
+        const form = document.querySelector("#TourGuide")
+        form.addEventListener('submit', async (event) => {
+            event.preventDefault()
+
+            const tourinput = form.querySelectorAll('input ,textarea')
+
+
+            let submision = {}
+
+            tourinput.forEach(element => {
+                const { value, name } = element
+                if (value) {
+                    submision[name] = value
+                }
+            })
+
+            // console.log(submision)
+
+            const { error, data } = await supabase
+            .from('guides')
+            .insert([submision], { returning: 'minimal' })
+            // console.log(error, data)
+            // return onclick=submit();
+            // error handling 
+            if (error) {
+                alert('check again and try later')
+            } else {
+                alert('Thank You 🙌 ! We Will contact You Soon')
+                
+            }
+
+            // reset the full form 
+            tourinput.forEach(element => element.value = '')
+
+        })
 
 
 
 
-        // Store data in the table
-        const storeData = (name, email, date, message) => {
-            const insertQuery = supabase
-                .from(guides)
-                .insert([{ name, email, date, message }])
-                .single();
-
-            insertQuery
-                .then(response => {
-                    console.log('Data stored successfully:', response);
-                })
-                .catch(error => {
-                    console.error('Error storing data:', error);
-                });
-        };
-
-// Example usage
-// const name = 'John Doe';
-// const email = 'john.doe@example.com';
-// const date = '2023-06-05';
-// const message = 'I would like to book a guide.';
-
-// storeData(name, email, date, message);
 
 
     </script>
